--- a/test/fixtures/vcr_cassettes/comment_job_perform_too_old.yml
+++ b/test/fixtures/vcr_cassettes/comment_job_perform_too_old.yml
@@ -2,43 +2,170 @@
 http_interactions:
 - request:
     method: post
-    uri: https://steemd.steemit.com/
+    uri: https://api.steemit.com/
     body:
       encoding: UTF-8
       string: '{"jsonrpc":"2.0","params":["follow_api","get_following",["cosgrove",null,"ignore",100]],"id":1,"method":"call"}'
     headers:
       Content-Type:
       - application/json
+      User-Agent:
+      - radiator/0.3.15
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
       Connection:
       - keep-alive
       Keep-Alive:
-      - 30
+      - '30'
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Mon, 12 Jun 2017 02:15:11 GMT
+      - Sat, 13 Jan 2018 19:02:55 GMT
+      Content-Type:
+      - application/json
       Content-Length:
       - '20'
       Connection:
       - keep-alive
       Server:
       - nginx
+      X-Jussi-Request-Id:
+      - 1515870175.254-8462065-446-172.31.18.180-47.208.249.50
       Access-Control-Allow-Origin:
       - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
       Strict-Transport-Security:
       - max-age=31557600; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
     body:
       encoding: UTF-8
-      string: '{"id":1,"result":[]}'
+      string: '{"result":[],"id":1}'
     http_version: 
-  recorded_at: Mon, 12 Jun 2017 02:15:11 GMT
+  recorded_at: Sat, 13 Jan 2018 19:02:55 GMT
+- request:
+    method: post
+    uri: https://api.steemit.com/
+    body:
+      encoding: UTF-8
+      string: '{"jsonrpc":"2.0","params":["database_api","get_accounts",[["inertia"]]],"id":1,"method":"call"}'
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - radiator/0.3.15
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      Connection:
+      - keep-alive
+      Keep-Alive:
+      - '30'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Sat, 13 Jan 2018 19:03:23 GMT
+      Content-Type:
+      - application/json
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Server:
+      - nginx
+      X-Jussi-Request-Id:
+      - 1515870203.384-8448591-429-172.31.9.230-47.208.249.50
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
+      Strict-Transport-Security:
+      - max-age=31557600; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+    body:
+      encoding: ASCII-8BIT
+      string: '{"result":[{"id":19155,"name":"inertia","owner":{"weight_threshold":1,"account_auths":[],"key_auths":[["STM6Xi6tS8Pm9bZFZybUohLRe1EXPbaYpvKS9YAFc92MjWRnGjktX",1]]},"active":{"weight_threshold":1,"account_auths":[],"key_auths":[["STM5KSmGafN8vC4ZnFzYH1aVxHjzJEGsoUAnBdKMEvfSQENDwNUy8",1]]},"posting":{"weight_threshold":1,"account_auths":[["booster",1],["frontrunner",1],["steemprojectsapp",1],["utopian.app",1]],"key_auths":[["STM7JrkBaUNQkPrgPywm79t33oEkbCyxYmqstKv3MsH629zuFarJV",1]]},"memo_key":"STM6nRwREbxuMfSrjrZUbJNkDhRtg6TMTZe4oHfRzWqT9AuTrSq1d","json_metadata":"{\"git\":{\"radiator\":{\"https\":{\"type\":\"https\",\"name\":\"radiator\",\"value\":\"https:\/\/github.com\/inertia186\/radiator\",\"projecturl\":\"radiator\"}}},\"squeek\":{\"profilePicture\":\"https:\/\/img1.steemit.com\/0x0\/http:\/\/i.imgur.com\/LbTz5yg.jpg\"},\"version\":\"0.0.1\",\"profile\":{\"email\":\"steemit@martin-studio.com\",\"location\":\"California\",\"timezone\":\"-7\",\"locale\":\"en_US\",\"languages\":[\"en\"],\"profile_image\":\"http:\/\/i.imgur.com\/LbTz5yg.jpg\",\"cover_image\":\"https:\/\/i.imgur.com\/0ccC6UH.png\",\"name\":\"inertia
+        \u24b6\u00b3\",\"about\":\"I can see the fnords.\"}}","proxy":"","last_owner_update":"2017-12-04T05:02:51","last_account_update":"2017-12-28T07:58:42","created":"2016-07-13T06:44:33","mined":false,"owner_challenged":false,"active_challenged":false,"last_owner_proved":"1970-01-01T00:00:00","last_active_proved":"1970-01-01T00:00:00","recovery_account":"steem","last_account_recovery":"2016-07-21T05:49:33","reset_account":"null","comment_count":0,"lifetime_vote_count":0,"post_count":2661,"can_vote":true,"voting_power":7518,"last_vote_time":"2018-01-13T17:30:27","balance":"4465.857
+        STEEM","savings_balance":"0.000 STEEM","sbd_balance":"6512.753 SBD","sbd_seconds":"7193382034869","sbd_seconds_last_update":"2018-01-13T02:04:48","sbd_last_interest_payment":"2017-12-24T14:58:27","savings_sbd_balance":"1560.000
+        SBD","savings_sbd_seconds":"1865856672000","savings_sbd_seconds_last_update":"2017-12-15T19:21:21","savings_sbd_last_interest_payment":"2017-12-03T17:28:57","savings_withdraw_requests":0,"reward_sbd_balance":"3.840
+        SBD","reward_steem_balance":"0.000 STEEM","reward_vesting_balance":"553530.606724
+        VESTS","reward_vesting_steem":"270.073 STEEM","vesting_shares":"101055901.871578
+        VESTS","delegated_vesting_shares":"26792279.530098 VESTS","received_vesting_shares":"3330387.374098
+        VESTS","vesting_withdraw_rate":"0.000000 VESTS","next_vesting_withdrawal":"1969-12-31T23:59:59","withdrawn":0,"to_withdraw":0,"withdraw_routes":0,"curation_rewards":2616335,"posting_rewards":17485270,"proxied_vsf_votes":["57641400761440","17287056326231",0,0],"witnesses_voted_for":28,"average_bandwidth":"60297746829","lifetime_bandwidth":"7103884000000","last_bandwidth_update":"2018-01-13T17:30:27","average_market_bandwidth":"6430973069","lifetime_market_bandwidth":"613840000000","last_market_bandwidth_update":"2018-01-11T05:24:15","last_post":"2018-01-13T16:46:33","last_root_post":"2018-01-13T00:45:12","vesting_balance":"0.000
+        STEEM","reputation":"119501143182409","transfer_history":[],"market_history":[],"post_history":[],"vote_history":[],"other_history":[],"witness_votes":["aggroed","agoric.systems","anyx","ausbitbank","blockbrothers","cervantes","charlieshrem","drakos","followbtcnews","furion","fyrst-witness","gingerninja","good-karma","gtg","jerrybanfield","jesta","klye","netuoso","pfunk","pharesim","reggaemuffin","riverhead","roelandp","someguy123","steemgigs","teamsteem","thecryptodrive","themarkymark"],"tags_usage":[],"guest_bloggers":[]}],"id":1}'
+    http_version: 
+  recorded_at: Sat, 13 Jan 2018 19:03:23 GMT
+- request:
+    method: post
+    uri: https://api.steemit.com/
+    body:
+      encoding: UTF-8
+      string: '{"jsonrpc":"2.0","params":["database_api","get_dynamic_global_properties",[]],"id":2,"method":"call"}'
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - radiator/0.3.15
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      Connection:
+      - keep-alive
+      Keep-Alive:
+      - '30'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Sat, 13 Jan 2018 19:03:23 GMT
+      Content-Type:
+      - application/json
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Server:
+      - nginx
+      X-Jussi-Cache-Hit:
+      - steemd.database_api.get_dynamic_global_properties
+      X-Jussi-Request-Id:
+      - 1515870203.672-8467139-436-172.31.9.230-47.208.249.50
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
+      Strict-Transport-Security:
+      - max-age=31557600; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+    body:
+      encoding: ASCII-8BIT
+      string: '{"jsonrpc":"2.0","result":{"id":0,"head_block_number":18949541,"head_block_id":"012125a5f8b0d0807686e944ad0b5c1714ed37cb","time":"2018-01-13T19:03:21","current_witness":"good-karma","total_pow":514415,"num_pow_witnesses":172,"virtual_supply":"263768507.277
+        STEEM","current_supply":"262618962.384 STEEM","confidential_supply":"0.000
+        STEEM","current_sbd_supply":"5999474.798 SBD","confidential_sbd_supply":"0.000
+        SBD","total_vesting_fund_steem":"199303546.860 STEEM","total_vesting_shares":"408152109614.055896
+        VESTS","total_reward_fund_steem":"0.000 STEEM","total_reward_shares2":"0","pending_rewarded_vesting_shares":"278784866.183128
+        VESTS","pending_rewarded_vesting_steem":"135426.219 STEEM","sbd_interest_rate":0,"sbd_print_rate":10000,"maximum_block_size":65536,"current_aslot":19011667,"recent_slots_filled":"340282366920938463463374607431768211455","participation_count":128,"last_irreversible_block_num":18949524,"vote_power_reserve_rate":10,"current_reserve_ratio":200000000,"average_block_size":14259,"max_virtual_bandwidth":"264241152000000000000"},"id":2}'
+    http_version: 
+  recorded_at: Sat, 13 Jan 2018 19:03:23 GMT
 recorded_with: VCR 3.0.3
