--- a/test/fixtures/vcr_cassettes/comment_job_perform_not_found.yml
+++ b/test/fixtures/vcr_cassettes/comment_job_perform_not_found.yml
@@ -2,134 +2,169 @@
 http_interactions:
 - request:
     method: post
-    uri: https://steemd.steemit.com/
+    uri: https://api.steemit.com/
     body:
       encoding: UTF-8
       string: '{"jsonrpc":"2.0","params":["follow_api","get_following",["cosgrove",null,"ignore",100]],"id":1,"method":"call"}'
     headers:
       Content-Type:
       - application/json
+      User-Agent:
+      - radiator/0.3.15
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
       Connection:
       - keep-alive
       Keep-Alive:
-      - 30
+      - '30'
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Mon, 12 Jun 2017 02:40:34 GMT
+      - Sat, 13 Jan 2018 19:03:24 GMT
+      Content-Type:
+      - application/json
       Content-Length:
       - '20'
       Connection:
       - keep-alive
       Server:
       - nginx
+      X-Jussi-Request-Id:
+      - 1515870204.299-8430388-446-172.31.9.230-47.208.249.50
       Access-Control-Allow-Origin:
       - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
       Strict-Transport-Security:
       - max-age=31557600; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
     body:
       encoding: UTF-8
-      string: '{"id":1,"result":[]}'
+      string: '{"result":[],"id":1}'
     http_version: 
-  recorded_at: Mon, 12 Jun 2017 02:40:34 GMT
+  recorded_at: Sat, 13 Jan 2018 19:03:24 GMT
 - request:
     method: post
-    uri: https://steemd.steemit.com/
+    uri: https://api.steemit.com/
     body:
       encoding: UTF-8
-      string: '{"jsonrpc":"2.0","params":["database_api","get_content",["nobody","nothing"]],"id":1,"method":"call"}'
+      string: '{"jsonrpc":"2.0","params":["database_api","get_accounts",[["nobody"]]],"id":1,"method":"call"}'
     headers:
       Content-Type:
       - application/json
+      User-Agent:
+      - radiator/0.3.15
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
       Connection:
       - keep-alive
       Keep-Alive:
-      - 30
+      - '30'
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Mon, 12 Jun 2017 02:40:39 GMT
-      Content-Length:
-      - '987'
+      - Sat, 13 Jan 2018 19:03:25 GMT
+      Content-Type:
+      - application/json
+      Transfer-Encoding:
+      - chunked
       Connection:
       - keep-alive
       Server:
       - nginx
+      X-Jussi-Request-Id:
+      - 1515870205.177-8478173-428-172.31.9.230-47.208.249.50
       Access-Control-Allow-Origin:
       - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
       Strict-Transport-Security:
       - max-age=31557600; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
     body:
-      encoding: UTF-8
-      string: '{"id":1,"result":{"id":0,"author":"","permlink":"","category":"","parent_author":"","parent_permlink":"","title":"","body":"","json_metadata":"","last_update":"1970-01-01T00:00:00","created":"1970-01-01T00:00:00","active":"1970-01-01T00:00:00","last_payout":"1970-01-01T00:00:00","depth":0,"children":0,"net_rshares":0,"abs_rshares":0,"vote_rshares":0,"children_abs_rshares":0,"cashout_time":"1970-01-01T00:00:00","max_cashout_time":"1970-01-01T00:00:00","total_vote_weight":0,"reward_weight":0,"total_payout_value":"0.000
-        STEEM","curator_payout_value":"0.000 STEEM","author_rewards":0,"net_votes":0,"root_comment":0,"max_accepted_payout":"0.000
-        STEEM","percent_steem_dollars":0,"allow_replies":false,"allow_votes":false,"allow_curation_rewards":false,"beneficiaries":[],"url":"","root_title":"","pending_payout_value":"0.000
-        STEEM","total_pending_payout_value":"0.000 STEEM","active_votes":[],"replies":[],"author_reputation":0,"promoted":"0.000
-        SBD","body_length":0,"reblogged_by":[]}}'
+      encoding: ASCII-8BIT
+      string: '{"result":[{"id":1573,"name":"nobody","owner":{"weight_threshold":1,"account_auths":[],"key_auths":[["STM5KaHbYNUnjZwyhEyueSDDZEKqTpPGqKXSMs6MoJrM2JPUM2H9i",1]]},"active":{"weight_threshold":1,"account_auths":[],"key_auths":[["STM5KaHbYNUnjZwyhEyueSDDZEKqTpPGqKXSMs6MoJrM2JPUM2H9i",1]]},"posting":{"weight_threshold":1,"account_auths":[],"key_auths":[["STM5KaHbYNUnjZwyhEyueSDDZEKqTpPGqKXSMs6MoJrM2JPUM2H9i",1]]},"memo_key":"STM5KaHbYNUnjZwyhEyueSDDZEKqTpPGqKXSMs6MoJrM2JPUM2H9i","json_metadata":"","proxy":"","last_owner_update":"1970-01-01T00:00:00","last_account_update":"1970-01-01T00:00:00","created":"2016-04-09T11:30:09","mined":true,"owner_challenged":false,"active_challenged":false,"last_owner_proved":"1970-01-01T00:00:00","last_active_proved":"1970-01-01T00:00:00","recovery_account":"steem","last_account_recovery":"1970-01-01T00:00:00","reset_account":"null","comment_count":0,"lifetime_vote_count":0,"post_count":0,"can_vote":true,"voting_power":9950,"last_vote_time":"2016-09-26T00:42:21","balance":"0.000
+        STEEM","savings_balance":"0.000 STEEM","sbd_balance":"0.002 SBD","sbd_seconds":"0","sbd_seconds_last_update":"2017-12-26T00:31:51","sbd_last_interest_payment":"2017-12-26T00:31:51","savings_sbd_balance":"0.000
+        SBD","savings_sbd_seconds":"0","savings_sbd_seconds_last_update":"1970-01-01T00:00:00","savings_sbd_last_interest_payment":"1970-01-01T00:00:00","savings_withdraw_requests":0,"reward_sbd_balance":"0.000
+        SBD","reward_steem_balance":"0.000 STEEM","reward_vesting_balance":"0.000000
+        VESTS","reward_vesting_steem":"0.000 STEEM","vesting_shares":"2087.793775
+        VESTS","delegated_vesting_shares":"0.000000 VESTS","received_vesting_shares":"0.000000
+        VESTS","vesting_withdraw_rate":"0.000000 VESTS","next_vesting_withdrawal":"1969-12-31T23:59:59","withdrawn":"253768894542277","to_withdraw":"253768894542277","withdraw_routes":0,"curation_rewards":139,"posting_rewards":0,"proxied_vsf_votes":[0,0,0,0],"witnesses_voted_for":0,"average_bandwidth":264000000,"lifetime_bandwidth":2243000000,"last_bandwidth_update":"2017-04-17T16:15:33","average_market_bandwidth":2640000000,"lifetime_market_bandwidth":"20150000000","last_market_bandwidth_update":"2017-04-17T16:15:33","last_post":"1970-01-01T00:00:00","last_root_post":"1970-01-01T00:00:00","vesting_balance":"0.000
+        STEEM","reputation":0,"transfer_history":[],"market_history":[],"post_history":[],"vote_history":[],"other_history":[],"witness_votes":[],"tags_usage":[],"guest_bloggers":[]}],"id":1}'
     http_version: 
-  recorded_at: Mon, 12 Jun 2017 02:40:39 GMT
+  recorded_at: Sat, 13 Jan 2018 19:03:25 GMT
 - request:
     method: post
-    uri: https://steemd.steemit.com/
+    uri: https://api.steemit.com/
     body:
       encoding: UTF-8
       string: '{"jsonrpc":"2.0","params":["database_api","get_dynamic_global_properties",[]],"id":2,"method":"call"}'
     headers:
       Content-Type:
       - application/json
+      User-Agent:
+      - radiator/0.3.15
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
       Connection:
       - keep-alive
       Keep-Alive:
-      - 30
+      - '30'
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Mon, 12 Jun 2017 02:40:39 GMT
-      Content-Length:
-      - '1037'
+      - Sat, 13 Jan 2018 19:03:25 GMT
+      Content-Type:
+      - application/json
+      Transfer-Encoding:
+      - chunked
       Connection:
       - keep-alive
       Server:
       - nginx
+      X-Jussi-Cache-Hit:
+      - steemd.database_api.get_dynamic_global_properties
+      X-Jussi-Request-Id:
+      - 1515870205.457-8418009-436-172.31.9.230-47.208.249.50
       Access-Control-Allow-Origin:
       - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
       Strict-Transport-Security:
       - max-age=31557600; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
     body:
-      encoding: UTF-8
-      string: '{"id":2,"result":{"id":0,"head_block_number":12743981,"head_block_id":"00c2752d8720bc647b2838a039edf83a65c54c4d","time":"2017-06-12T02:40:39","current_witness":"clayop","total_pow":514415,"num_pow_witnesses":172,"virtual_supply":"251042030.119
-        STEEM","current_supply":"250331562.450 STEEM","confidential_supply":"0.000
-        STEEM","current_sbd_supply":"1717200.356 SBD","confidential_sbd_supply":"0.000
-        SBD","total_vesting_fund_steem":"178747444.962 STEEM","total_vesting_shares":"370174730807.395029
-        VESTS","total_reward_fund_steem":"0.000 STEEM","total_reward_shares2":"0","pending_rewarded_vesting_shares":"99098958.401737
-        VESTS","pending_rewarded_vesting_steem":"47814.837 STEEM","sbd_interest_rate":0,"sbd_print_rate":10000,"average_block_size":4648,"maximum_block_size":65536,"current_aslot":12800013,"recent_slots_filled":"340282366920938463463374607431768211455","participation_count":128,"last_irreversible_block_num":12743964,"max_virtual_bandwidth":"5986734968066277376","current_reserve_ratio":20000,"vote_power_reserve_rate":40}}'
+      encoding: ASCII-8BIT
+      string: '{"jsonrpc":"2.0","result":{"id":0,"head_block_number":18949542,"head_block_id":"012125a6b606b4ea021b43177c815f9b78885c7b","time":"2018-01-13T19:03:24","current_witness":"blocktrades","total_pow":514415,"num_pow_witnesses":172,"virtual_supply":"263768509.504
+        STEEM","current_supply":"262618964.579 STEEM","confidential_supply":"0.000
+        STEEM","current_sbd_supply":"5999474.968 SBD","confidential_sbd_supply":"0.000
+        SBD","total_vesting_fund_steem":"199303547.940 STEEM","total_vesting_shares":"408152111131.548049
+        VESTS","total_reward_fund_steem":"0.000 STEEM","total_reward_shares2":"0","pending_rewarded_vesting_shares":"278783831.993774
+        VESTS","pending_rewarded_vesting_steem":"135425.714 STEEM","sbd_interest_rate":0,"sbd_print_rate":10000,"maximum_block_size":65536,"current_aslot":19011668,"recent_slots_filled":"340282366920938463463374607431768211455","participation_count":128,"last_irreversible_block_num":18949524,"vote_power_reserve_rate":10,"current_reserve_ratio":200000000,"average_block_size":14238,"max_virtual_bandwidth":"264241152000000000000"},"id":2}'
     http_version: 
-  recorded_at: Mon, 12 Jun 2017 02:40:39 GMT
+  recorded_at: Sat, 13 Jan 2018 19:03:25 GMT
 recorded_with: VCR 3.0.3
