--- a/test/fixtures/vcr_cassettes/upvote_job_perform_too_old.yml
+++ b/test/fixtures/vcr_cassettes/upvote_job_perform_too_old.yml
@@ -2,43 +2,113 @@
 http_interactions:
 - request:
     method: post
-    uri: https://steemd.steemit.com/
+    uri: https://api.steemit.com/
     body:
       encoding: UTF-8
       string: '{"jsonrpc":"2.0","params":["follow_api","get_following",["cosgrove",null,"ignore",100]],"id":1,"method":"call"}'
     headers:
       Content-Type:
       - application/json
+      User-Agent:
+      - radiator/0.3.15
       Accept-Encoding:
       - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
       Accept:
       - "*/*"
-      User-Agent:
-      - Ruby
       Connection:
       - keep-alive
       Keep-Alive:
-      - 30
+      - '30'
   response:
     status:
       code: 200
       message: OK
     headers:
       Date:
-      - Mon, 12 Jun 2017 02:15:11 GMT
+      - Sat, 13 Jan 2018 19:03:26 GMT
+      Content-Type:
+      - application/json
       Content-Length:
-      - '20'
+      - '36'
       Connection:
       - keep-alive
       Server:
       - nginx
+      X-Jussi-Cache-Hit:
+      - steemd.follow_api.get_following.params=['cosgrove',None,'ignore',100]
+      X-Jussi-Request-Id:
+      - 1515870206.008-8465660-446-172.31.9.230-47.208.249.50
       Access-Control-Allow-Origin:
       - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
       Strict-Transport-Security:
       - max-age=31557600; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
     body:
       encoding: UTF-8
-      string: '{"id":1,"result":[]}'
+      string: '{"jsonrpc":"2.0","result":[],"id":1}'
     http_version: 
-  recorded_at: Mon, 12 Jun 2017 02:15:11 GMT
+  recorded_at: Sat, 13 Jan 2018 19:03:26 GMT
+- request:
+    method: post
+    uri: https://api.steemit.com/
+    body:
+      encoding: UTF-8
+      string: '{"jsonrpc":"2.0","params":["database_api","get_dynamic_global_properties",[]],"id":1,"method":"call"}'
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - radiator/0.3.15
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      Connection:
+      - keep-alive
+      Keep-Alive:
+      - '30'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Date:
+      - Sat, 13 Jan 2018 19:03:26 GMT
+      Content-Type:
+      - application/json
+      Transfer-Encoding:
+      - chunked
+      Connection:
+      - keep-alive
+      Server:
+      - nginx
+      X-Jussi-Cache-Hit:
+      - steemd.database_api.get_dynamic_global_properties
+      X-Jussi-Request-Id:
+      - 1515870206.741-8471008-436-172.31.9.230-47.208.249.50
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
+      Strict-Transport-Security:
+      - max-age=31557600; includeSubDomains; preload
+      Content-Security-Policy:
+      - upgrade-insecure-requests
+    body:
+      encoding: ASCII-8BIT
+      string: '{"jsonrpc":"2.0","result":{"id":0,"head_block_number":18949542,"head_block_id":"012125a6b606b4ea021b43177c815f9b78885c7b","time":"2018-01-13T19:03:24","current_witness":"blocktrades","total_pow":514415,"num_pow_witnesses":172,"virtual_supply":"263768509.504
+        STEEM","current_supply":"262618964.579 STEEM","confidential_supply":"0.000
+        STEEM","current_sbd_supply":"5999474.968 SBD","confidential_sbd_supply":"0.000
+        SBD","total_vesting_fund_steem":"199303547.978 STEEM","total_vesting_shares":"408152111209.368240
+        VESTS","total_reward_fund_steem":"0.000 STEEM","total_reward_shares2":"0","pending_rewarded_vesting_shares":"278783754.173583
+        VESTS","pending_rewarded_vesting_steem":"135425.676 STEEM","sbd_interest_rate":0,"sbd_print_rate":10000,"maximum_block_size":65536,"current_aslot":19011668,"recent_slots_filled":"340282366920938463463374607431768211455","participation_count":128,"last_irreversible_block_num":18949524,"vote_power_reserve_rate":10,"current_reserve_ratio":200000000,"average_block_size":14238,"max_virtual_bandwidth":"264241152000000000000"},"id":1}'
+    http_version: 
+  recorded_at: Sat, 13 Jan 2018 19:03:26 GMT
 recorded_with: VCR 3.0.3
