--- a/test/fixtures/vcr_cassettes/market_effective_apr.yml
+++ b/test/fixtures/vcr_cassettes/market_effective_apr.yml
@@ -58,4 +58,52 @@ http_interactions:
         VESTS","pending_rewarded_vesting_steem":"135388.878 STEEM","sbd_interest_rate":0,"sbd_print_rate":10000,"maximum_block_size":65536,"current_aslot":19011737,"recent_slots_filled":"340282366920938463463374607431768211455","participation_count":128,"last_irreversible_block_num":18949592,"vote_power_reserve_rate":10,"current_reserve_ratio":200000000,"average_block_size":14752,"max_virtual_bandwidth":"264241152000000000000"},"id":1}'
     http_version: 
   recorded_at: Sat, 13 Jan 2018 19:06:54 GMT
+- request:
+    method: post
+    uri: https://gtg.steem.house:8090/
+    body:
+      encoding: UTF-8
+      string: '{"jsonrpc":"2.0","params":["database_api","get_dynamic_global_properties",[]],"id":1,"method":"call"}'
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - radiator/0.3.15
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      Connection:
+      - keep-alive
+      Keep-Alive:
+      - '30'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - nginx
+      Date:
+      - Sun, 21 Jan 2018 18:48:51 GMT
+      Content-Length:
+      - '1043'
+      Connection:
+      - keep-alive
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
+    body:
+      encoding: UTF-8
+      string: '{"id":1,"result":{"id":0,"head_block_number":19179536,"head_block_id":"0124a810c254373ded08aea8329a7a71a1a487bc","time":"2018-01-21T18:48:51","current_witness":"aggroed","total_pow":514415,"num_pow_witnesses":172,"virtual_supply":"264376854.202
+        STEEM","current_supply":"262997697.233 STEEM","confidential_supply":"0.000
+        STEEM","current_sbd_supply":"6706840.341 SBD","confidential_sbd_supply":"0.000
+        SBD","total_vesting_fund_steem":"197880995.029 STEEM","total_vesting_shares":"405079021129.940269
+        VESTS","total_reward_fund_steem":"0.000 STEEM","total_reward_shares2":"0","pending_rewarded_vesting_shares":"283231732.476479
+        VESTS","pending_rewarded_vesting_steem":"137618.399 STEEM","sbd_interest_rate":0,"sbd_print_rate":10000,"maximum_block_size":65536,"current_aslot":19241777,"recent_slots_filled":"340282366920938463463374607431768211455","participation_count":128,"last_irreversible_block_num":19179518,"vote_power_reserve_rate":10,"current_reserve_ratio":4424522,"average_block_size":15500,"max_virtual_bandwidth":"5845703951646720000"}}'
+    http_version: 
+  recorded_at: Sun, 21 Jan 2018 18:48:51 GMT
 recorded_with: VCR 3.0.3
