--- a/test/fixtures/vcr_cassettes/market_price_feed.yml
+++ b/test/fixtures/vcr_cassettes/market_price_feed.yml
@@ -154,4 +154,142 @@ http_interactions:
         VESTS","pending_rewarded_vesting_steem":"135388.854 STEEM","sbd_interest_rate":0,"sbd_print_rate":10000,"maximum_block_size":65536,"current_aslot":19011738,"recent_slots_filled":"340282366920938463463374607431768211455","participation_count":128,"last_irreversible_block_num":18949593,"vote_power_reserve_rate":10,"current_reserve_ratio":200000000,"average_block_size":14728,"max_virtual_bandwidth":"264241152000000000000"},"id":2}'
     http_version: 
   recorded_at: Sat, 13 Jan 2018 19:06:55 GMT
+- request:
+    method: post
+    uri: https://gtg.steem.house:8090/
+    body:
+      encoding: UTF-8
+      string: '{"jsonrpc":"2.0","params":["database_api","get_feed_history",[]],"id":1,"method":"call"}'
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - radiator/0.3.15
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      Connection:
+      - keep-alive
+      Keep-Alive:
+      - '30'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - nginx
+      Date:
+      - Sun, 21 Jan 2018 18:48:30 GMT
+      Content-Length:
+      - '3724'
+      Connection:
+      - keep-alive
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
+    body:
+      encoding: UTF-8
+      string: '{"id":1,"result":{"id":0,"current_median_history":{"base":"4.863 SBD","quote":"1.000
+        STEEM"},"price_history":[{"base":"4.032 SBD","quote":"1.000 STEEM"},{"base":"3.935
+        SBD","quote":"1.000 STEEM"},{"base":"3.896 SBD","quote":"1.000 STEEM"},{"base":"4.055
+        SBD","quote":"1.000 STEEM"},{"base":"4.038 SBD","quote":"1.000 STEEM"},{"base":"4.171
+        SBD","quote":"1.000 STEEM"},{"base":"4.251 SBD","quote":"1.000 STEEM"},{"base":"4.262
+        SBD","quote":"1.000 STEEM"},{"base":"4.273 SBD","quote":"1.000 STEEM"},{"base":"4.400
+        SBD","quote":"1.000 STEEM"},{"base":"4.405 SBD","quote":"1.000 STEEM"},{"base":"4.423
+        SBD","quote":"1.000 STEEM"},{"base":"4.331 SBD","quote":"1.000 STEEM"},{"base":"4.284
+        SBD","quote":"1.000 STEEM"},{"base":"4.352 SBD","quote":"1.000 STEEM"},{"base":"4.323
+        SBD","quote":"1.000 STEEM"},{"base":"4.157 SBD","quote":"1.000 STEEM"},{"base":"4.075
+        SBD","quote":"1.000 STEEM"},{"base":"4.162 SBD","quote":"1.000 STEEM"},{"base":"4.287
+        SBD","quote":"1.000 STEEM"},{"base":"4.376 SBD","quote":"1.000 STEEM"},{"base":"4.171
+        SBD","quote":"1.000 STEEM"},{"base":"4.210 SBD","quote":"1.000 STEEM"},{"base":"4.341
+        SBD","quote":"1.000 STEEM"},{"base":"4.350 SBD","quote":"1.000 STEEM"},{"base":"4.358
+        SBD","quote":"1.000 STEEM"},{"base":"4.386 SBD","quote":"1.000 STEEM"},{"base":"4.396
+        SBD","quote":"1.000 STEEM"},{"base":"4.396 SBD","quote":"1.000 STEEM"},{"base":"4.477
+        SBD","quote":"1.000 STEEM"},{"base":"4.534 SBD","quote":"1.000 STEEM"},{"base":"4.707
+        SBD","quote":"1.000 STEEM"},{"base":"4.791 SBD","quote":"1.000 STEEM"},{"base":"4.822
+        SBD","quote":"1.000 STEEM"},{"base":"5.057 SBD","quote":"1.000 STEEM"},{"base":"4.863
+        SBD","quote":"1.000 STEEM"},{"base":"4.692 SBD","quote":"1.000 STEEM"},{"base":"4.632
+        SBD","quote":"1.000 STEEM"},{"base":"4.583 SBD","quote":"1.000 STEEM"},{"base":"4.642
+        SBD","quote":"1.000 STEEM"},{"base":"4.662 SBD","quote":"1.000 STEEM"},{"base":"4.673
+        SBD","quote":"1.000 STEEM"},{"base":"4.893 SBD","quote":"1.000 STEEM"},{"base":"5.367
+        SBD","quote":"1.000 STEEM"},{"base":"5.470 SBD","quote":"1.000 STEEM"},{"base":"5.393
+        SBD","quote":"1.000 STEEM"},{"base":"5.325 SBD","quote":"1.000 STEEM"},{"base":"5.170
+        SBD","quote":"1.000 STEEM"},{"base":"5.223 SBD","quote":"1.000 STEEM"},{"base":"5.296
+        SBD","quote":"1.000 STEEM"},{"base":"5.325 SBD","quote":"1.000 STEEM"},{"base":"5.405
+        SBD","quote":"1.000 STEEM"},{"base":"5.495 SBD","quote":"1.000 STEEM"},{"base":"5.508
+        SBD","quote":"1.000 STEEM"},{"base":"5.396 SBD","quote":"1.000 STEEM"},{"base":"5.425
+        SBD","quote":"1.000 STEEM"},{"base":"5.385 SBD","quote":"1.000 STEEM"},{"base":"5.349
+        SBD","quote":"1.000 STEEM"},{"base":"5.373 SBD","quote":"1.000 STEEM"},{"base":"5.406
+        SBD","quote":"1.000 STEEM"},{"base":"5.429 SBD","quote":"1.000 STEEM"},{"base":"5.445
+        SBD","quote":"1.000 STEEM"},{"base":"5.415 SBD","quote":"1.000 STEEM"},{"base":"5.422
+        SBD","quote":"1.000 STEEM"},{"base":"5.427 SBD","quote":"1.000 STEEM"},{"base":"5.477
+        SBD","quote":"1.000 STEEM"},{"base":"5.570 SBD","quote":"1.000 STEEM"},{"base":"5.570
+        SBD","quote":"1.000 STEEM"},{"base":"5.539 SBD","quote":"1.000 STEEM"},{"base":"5.354
+        SBD","quote":"1.000 STEEM"},{"base":"5.343 SBD","quote":"1.000 STEEM"},{"base":"5.196
+        SBD","quote":"1.000 STEEM"},{"base":"5.136 SBD","quote":"1.000 STEEM"},{"base":"4.978
+        SBD","quote":"1.000 STEEM"},{"base":"4.939 SBD","quote":"1.000 STEEM"},{"base":"4.873
+        SBD","quote":"1.000 STEEM"},{"base":"4.849 SBD","quote":"1.000 STEEM"},{"base":"5.118
+        SBD","quote":"1.000 STEEM"},{"base":"5.311 SBD","quote":"1.000 STEEM"},{"base":"5.274
+        SBD","quote":"1.000 STEEM"},{"base":"5.177 SBD","quote":"1.000 STEEM"},{"base":"5.069
+        SBD","quote":"1.000 STEEM"},{"base":"4.960 SBD","quote":"1.000 STEEM"},{"base":"4.768
+        SBD","quote":"1.000 STEEM"}]}}'
+    http_version: 
+  recorded_at: Sun, 21 Jan 2018 18:48:30 GMT
+- request:
+    method: post
+    uri: https://gtg.steem.house:8090/
+    body:
+      encoding: UTF-8
+      string: '{"jsonrpc":"2.0","params":["database_api","get_dynamic_global_properties",[]],"id":2,"method":"call"}'
+    headers:
+      Content-Type:
+      - application/json
+      User-Agent:
+      - radiator/0.3.15
+      Accept-Encoding:
+      - gzip;q=1.0,deflate;q=0.6,identity;q=0.3
+      Accept:
+      - "*/*"
+      Connection:
+      - keep-alive
+      Keep-Alive:
+      - '30'
+      Host:
+      - gtg.steem.house:8090
+      Content-Length:
+      - '101'
+  response:
+    status:
+      code: 200
+      message: OK
+    headers:
+      Server:
+      - nginx
+      Date:
+      - Sun, 21 Jan 2018 18:48:41 GMT
+      Content-Length:
+      - '1046'
+      Connection:
+      - keep-alive
+      Access-Control-Allow-Origin:
+      - "*"
+      Access-Control-Allow-Methods:
+      - GET, POST, OPTIONS
+      Access-Control-Allow-Headers:
+      - DNT,Keep-Alive,User-Agent,X-Requested-With,If-Modified-Since,Cache-Control,Content-Type,Content-Range,Range
+    body:
+      encoding: UTF-8
+      string: '{"id":2,"result":{"id":0,"head_block_number":19179532,"head_block_id":"0124a80c33350447283c7c39994f0da48b49f9a4","time":"2018-01-21T18:48:39","current_witness":"good-karma","total_pow":514415,"num_pow_witnesses":172,"virtual_supply":"264376844.515
+        STEEM","current_supply":"262997689.448 STEEM","confidential_supply":"0.000
+        STEEM","current_sbd_supply":"6706831.095 SBD","confidential_sbd_supply":"0.000
+        SBD","total_vesting_fund_steem":"197881001.658 STEEM","total_vesting_shares":"405079037486.225673
+        VESTS","total_reward_fund_steem":"0.000 STEEM","total_reward_shares2":"0","pending_rewarded_vesting_shares":"283226111.168572
+        VESTS","pending_rewarded_vesting_steem":"137615.653 STEEM","sbd_interest_rate":0,"sbd_print_rate":10000,"maximum_block_size":65536,"current_aslot":19241773,"recent_slots_filled":"340282366920938463463374607431768211455","participation_count":128,"last_irreversible_block_num":19179516,"vote_power_reserve_rate":10,"current_reserve_ratio":4424522,"average_block_size":15470,"max_virtual_bandwidth":"5845703951646720000"}}'
+    http_version: 
+  recorded_at: Sun, 21 Jan 2018 18:48:41 GMT
 recorded_with: VCR 3.0.3
